tests/expectations/compiler/constants/block_timestamp_type_fail.out
Error [ETYC0372117]: Expected type `u32` but type `i64` was found.
    --> compiler-test:2:18
     |
   2 |     let x: u32 = block.timestamp;
     |                  ^^^^^^^^^^^^^^^
